--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,32 +35,40 @@
                     android:textColor="@color/white"
                     android:textSize="14dp" />
 
-                <ImageView
-                    android:id="@+id/iv_1"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/main_tv_sy"
-                    android:src="@mipmap/userinfo" />
 
-                <TextView
-                    android:id="@+id/main_tv_username"
+                <LinearLayout
+                    android:id="@+id/user_ll"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/iv_1"
-                    android:layout_centerVertical="true"
-                    android:text="幸运女神"
-                    android:textColor="@color/white"
-                    android:textSize="14dp" />
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/iv_1"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@mipmap/userinfo" />
+
+                    <TextView
+                        android:id="@+id/main_tv_username"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="幸运女神"
+                        android:textColor="@color/white"
+                        android:textSize="14dp" />
+                </LinearLayout>
 
                 <TextView
+                    android:id="@+id/login_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/btn_bg_bian"
                     android:text="登录"
-                    android:layout_marginRight="10dp"
                     android:textColor="@color/white"
                     android:textSize="14dp" />
             </RelativeLayout>
@@ -68,8 +76,7 @@
             <com.youth.banner.Banner
                 android:id="@+id/banner"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_height="150dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -83,6 +90,7 @@
                     android:src="@mipmap/icon_notice" />
 
                 <net.tsz.afinal.view.AlwaysMarqueeTextView
+                    android:id="@+id/message_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ellipsize="marquee"
@@ -120,8 +128,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2.5"
+                android:layout_height="200dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -142,8 +149,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@mipmap/g_bjpk10" />
 
                         <TextView
@@ -152,7 +159,6 @@
                             android:layout_height="wrap_content"
                             android:text="北京赛车" />
                     </LinearLayout>
-
 
 
                     <LinearLayout
@@ -167,14 +173,15 @@
 
                         <ImageView
                             style="@style/main_item_iv"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@mipmap/g_xyft" />
 
                         <TextView
                             style="@style/main_item_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:text="幸运飞艇" />
                     </LinearLayout>
 
@@ -196,8 +203,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@mipmap/g_ssc" />
 
                         <TextView
@@ -233,8 +240,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@mipmap/menu_service" />
 
                         <TextView
@@ -262,8 +269,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@mipmap/g_chat" />
 
                         <TextView
@@ -291,8 +298,8 @@
 
                         <ImageView
                             style="@style/main_item_iv"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
                             android:src="@mipmap/g_computer" />
 
                         <TextView
@@ -308,12 +315,6 @@
                         android:background="@color/line_bg"
                         tools:ignore="Suspicious0dp" />
                 </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal" />
             </LinearLayout>
         </LinearLayout>
 
