--- a/app/src/main/res/layout/activity_pc_dd.xml
+++ b/app/src/main/res/layout/activity_pc_dd.xml
@@ -13,8 +13,7 @@
             android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            app:center_tv="PC蛋蛋"
+            app:center_tv="江苏骰宝（快3）"
             app:left_iv="@mipmap/left_jian"
             app:right_iv="@mipmap/caidan_san" />
 
@@ -24,11 +23,13 @@
             android:background="@color/white" />
 
         <LinearLayout
+            android:id="@+id/old_qi_ll"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="10dp">
+            android:paddingLeft="10dp"
+            android:visibility="gone">
 
             <TextView
                 android:id="@+id/top_qi_tv"
@@ -75,12 +76,14 @@
                 android:id="@+id/next2_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="00:15"
                 android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/next3_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:text="开奖："
                 android:textColor="@color/white" />
 
@@ -88,8 +91,14 @@
                 android:id="@+id/next4_qi_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="00:45"
                 android:textColor="@color/white" />
         </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:background="@color/white" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -167,10 +176,9 @@
                         android:id="@+id/tz_et"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/main_bg"
+                        android:background="@null"
                         android:hint="投注额"
-                        android:inputType="number"
-                        android:padding="5dp" />
+                        android:inputType="number" />
                 </LinearLayout>
 
                 <LinearLayout
