--- a/app/src/main/res/layout/item_type2.xml
+++ b/app/src/main/res/layout/item_type2.xml
@@ -3,6 +3,7 @@
     android:id="@+id/total_ll"
     android:layout_width="match_parent"
     android:layout_height="50dp"
+    android:background="#ff666666"
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -10,7 +11,6 @@
         android:id="@+id/left_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="阿萨德"
         android:textColor="@color/black"
         android:textSize="16sp" />
 
@@ -18,6 +18,5 @@
         android:id="@+id/right_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="阿萨德"
         android:textSize="12sp" />
 </LinearLayout>
