--- a/mvvm2/src/main/res/values/color.xml
+++ b/mvvm2/src/main/res/values/color.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="background_color">#E5E5E5</color>
-  <color name="white">#fff</color>
-  <color name="text_gray_color">#A5A5A5</color>
+    <color name="background_color">#E5E5E5</color>
+    <color name="white">#fff</color>
+    <color name="tm_white">#44ffffff</color>
+    <color name="text_gray_color">#A5A5A5</color>
     <color name="yellow">#FFD200</color>
     <color name="huired">#D3563E</color>
 
