--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -69,30 +69,37 @@
             app:left_iv="@mipmap/left_jian"
             app:right_iv="@mipmap/caidan_san" />
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"
             android:gravity="center_vertical"
             android:paddingLeft="15dp">
 
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@mipmap/userinfo" />
-
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="1231"
-                android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@mipmap/userinfo" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:text="1"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+            </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_centerInParent="true"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -102,35 +109,45 @@
                     android:src="@mipmap/money" />
 
                 <TextView
+                    android:id="@+id/yue_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:text="1231"
+                    android:text="1"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/cz_btn"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_bg_bian"
-                android:padding="5dp"
-                android:text="充值"
-                android:textColor="@color/white" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:gravity="center">
 
-            <TextView
-                android:id="@+id/tx_btn"
-                android:layout_width="40dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="20dp"
-                android:background="@drawable/btn_bg_bian"
-                android:padding="5dp"
-                android:text="提现"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/cz_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_bg_bian"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="充值"
+                    android:textColor="@color/white" />
+
+                <TextView
+                    android:id="@+id/tx_btn"
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="15dp"
+                    android:background="@drawable/btn_bg_bian"
+                    android:gravity="center"
+                    android:padding="5dp"
+                    android:text="提现"
+                    android:textColor="@color/white" />
+            </LinearLayout>
+        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
