--- a/app/src/main/res/layout/activity_pc_dd.xml
+++ b/app/src/main/res/layout/activity_pc_dd.xml
@@ -9,6 +9,12 @@
         android:background="@mipmap/bg2"
         android:orientation="vertical">
 
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
+
         <net.tsz.afinal.view.TitleBar
             android:id="@+id/title_bar"
             android:layout_width="match_parent"
