更新个人中心 UI

--- a/app/src/main/res/layout/activity_add_bank.xml
+++ b/app/src/main/res/layout/activity_add_bank.xml
@@ -14,6 +14,7 @@
         app:left_iv="@mipmap/left_jian" />
 
     <LinearLayout
+        android:id="@+id/llay_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
