--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="line_bg">#E8E8E9</color>
     <color name="lab_col">#3C3C3C</color>
     <color name="black">#000</color>
+    <color name="black1">#333333</color>
+    <color name="black2">#666666</color>
+    <color name="black3">#999999</color>
     <color name="tm_black">#44000000</color>
     <color name="tm_white_color">#FFFFFFFF</color>
     <color name="tm_pressed_color">#FF136B93</color>
