--- a/app/src/main/res/layout/activity_bankaccount_list.xml
+++ b/app/src/main/res/layout/activity_bankaccount_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
     <net.tsz.afinal.view.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
@@ -11,11 +12,19 @@
         android:background="@color/colorPrimary"
         app:center_tv="银行账号"
         app:left_iv="@mipmap/left_jian" />
+
     <Button
+        android:id="@+id/btn_add"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:layout_margin="10dp"
         android:background="@drawable/btn_bg_selector"
         android:text="添加银行卡"
         android:textColor="@color/white" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recy_bank"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
