--- a/app/src/main/res/layout/activity_bet_list.xml
+++ b/app/src/main/res/layout/activity_bet_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
+
     <net.tsz.afinal.view.TitleBar
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
@@ -12,11 +13,12 @@
         android:background="@color/colorPrimary"
         app:center_tv="下注记录"
         app:left_iv="@mipmap/left_jian" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/blue">
+        android:background="@color/blue"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="0dp"
@@ -32,8 +34,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="笔数"
             android:padding="5dp"
+            android:text="笔数"
             android:textColor="@color/white" />
 
         <TextView
@@ -41,21 +43,23 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="输赢"
             android:padding="5dp"
+            android:text="输赢"
             android:textColor="@color/white" />
 
     </LinearLayout>
-    <ListView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recy_record"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></ListView>
+        android:layout_weight="1" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:background="@color/blue"
+        android:orientation="horizontal"
         android:padding="10dp">
 
         <TextView
@@ -75,4 +79,5 @@
             android:text="总输赢:0"
             android:textColor="@color/white" />
     </LinearLayout>
+
 </LinearLayout>
