--- a/app/src/main/res/layout/activity_bet_list.xml
+++ b/app/src/main/res/layout/activity_bet_list.xml
@@ -63,6 +63,7 @@
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/tv_count"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -72,12 +73,14 @@
 
 
         <TextView
+            android:id="@+id/tv_money"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="总输赢:0"
+            android:text="总输赢：0"
             android:textColor="@color/white" />
+
     </LinearLayout>
 
 </LinearLayout>
