--- a/app/src/main/res/layout/activity_capital.xml
+++ b/app/src/main/res/layout/activity_capital.xml
@@ -47,7 +47,8 @@
                         android:id="@+id/name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="123123" />
+                        android:text="123123"
+                        android:textColor="@color/white"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -58,9 +59,11 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:id="@+id/textView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="用户余额：" />
+                            android:text="用户余额："
+                            android:textColor="@color/white"/>
 
                         <TextView
                             android:id="@+id/yue_tv"
@@ -73,7 +76,8 @@
                             android:id="@+id/refresh_iv"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
-                            android:src="@mipmap/refresh" />
+                            android:src="@mipmap/refresh"
+                            android:padding="3dp"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -85,12 +89,14 @@
                             android:id="@+id/fs_yue_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="反水金额：0.00" />
+                            android:text="反水金额：0.00"
+                            android:textColor="@color/white"/>
 
                         <ImageView
                             android:id="@+id/refresh1_iv"
                             android:layout_width="20dp"
                             android:layout_height="20dp"
+                            android:padding="3dp"
                             android:src="@mipmap/refresh" />
                     </LinearLayout>
 
@@ -112,7 +118,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
-                android:background="@color/white" />
+                android:background="@color/line_bg" />
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/capital_vp"
