--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,20 +6,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@mipmap/bg2">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="#fff333"
             android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@mipmap/icon" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,22 +42,25 @@
             <EditText
                 android:id="@+id/id_et"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:drawableLeft="@mipmap/user"
                 android:hint="用户名"
                 android:paddingLeft="5dp"
                 android:paddingRight="10dp"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:background="@drawable/edit_bg"/>
 
             <EditText
                 android:id="@+id/pwd_et"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:drawableLeft="@mipmap/pwd"
+                android:background="@drawable/edit_bg"
                 android:hint="密码"
                 android:inputType="textPassword"
                 android:paddingLeft="5dp"
@@ -69,13 +72,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="登录" />
+                android:text="登录"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:background="@drawable/btn_bg_selector"/>
             <Button
                 android:id="@+id/register_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="注册" />
+                android:text="注册"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:background="@drawable/btn_bg_selector"/>
         </LinearLayout>
     </LinearLayout>
 </layout>
