--- a/app/src/main/res/layout/activity_qupwd.xml
+++ b/app/src/main/res/layout/activity_qupwd.xml
@@ -1,63 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/line_bg"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <net.tsz.afinal.view.TitleBar
-        android:id="@+id/title_bar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:center_tv="取款密码"
-        app:left_iv="@mipmap/left_jian" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/border_et_white"
-        android:hint="请输入旧密码"
-        android:padding="10dp"
-        android:textSize="16sp" />
+        <net.tsz.afinal.view.TitleBar
+            android:id="@+id/title_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            app:center_tv="取款密码"
+            app:left_iv="@mipmap/left_jian" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/border_et_white"
-        android:hint="请输入新密码"
-        android:padding="10dp"
-        android:textSize="16sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/dihui"
+            android:orientation="vertical">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/border_et_white"
-        android:hint="请再次输入新密码"
-        android:padding="10dp"
-        android:textSize="16sp" />
+            <EditText
+                android:id="@+id/old_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_bg"
+                android:hint="请输入旧密码"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textSize="15sp" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/btn_round_main"
-        android:gravity="center"
-        android:padding="10dp"
-        android:text="确认修改"
-        android:textColor="@color/white"
-        android:textSize="16sp" />
+            <EditText
+                android:id="@+id/new_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_bg"
+                android:hint="请输入新密码"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textSize="15sp" />
 
-</LinearLayout>
+            <EditText
+                android:id="@+id/new_again_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/edit_bg"
+                android:hint="请再次输入新密码"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/btn_bg_selector"
+                android:text="确认修改"
+                android:textColor="@color/white" />
+        </LinearLayout>
+    </LinearLayout>
+</layout>
