--- a/app/src/main/res/layout/item_jl.xml
+++ b/app/src/main/res/layout/item_jl.xml
@@ -3,7 +3,8 @@
     android:id="@+id/total_rl"
     android:layout_width="match_parent"
     android:layout_height="35dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:gravity="center_vertical">
 
 
     <TextView
