--- a/app/src/main/res/layout/item_left.xml
+++ b/app/src/main/res/layout/item_left.xml
@@ -19,6 +19,6 @@
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_margin="5dp"
-        android:background="@color/red"
+        android:background="@drawable/cycle_yellow"
         android:visibility="gone" />
 </RelativeLayout>
