--- a/app/src/main/res/layout/item_title.xml
+++ b/app/src/main/res/layout/item_title.xml
@@ -17,5 +17,6 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center" />
+        android:gravity="center"
+        />
 </RelativeLayout>
